[package]
name = "r05-multi-path-tcp-forwarder"
version = "0.1.0"
authors = ["Recursive G <g.recursive@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
futures = "0.3.1"
tokio = { version = "0.2.9", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.3"